- https://github.com/eclipse-syson/syson/issues/1350[#1350] [general-view] Improve _direct edit_ tool on `Feature` to be able to edit `FeatureValue` with basic expressions.
- https://github.com/eclipse-syson/syson/issues/1363[#1363] [general-view] Add a reveal only valued content action on the manage visibility node action that will hide empty graphical compartments and will reveal the others.

=== New features

- https://github.com/eclipse-syson/syson/issues/1237[#1237] [general-view] Add `ViewUsage` graphical node in the _General View_ diagram.
- https://github.com/eclipse-syson/syson/issues/1279[#1279] [general-view] Support `ViewUsage` graphical contents in the _General View_ diagram.
- https://github.com/eclipse-syson/syson/issues/1336[#1336] [general-view] Add manage visibility node action on `Definition` and `Usage` graphical nodes element in the _General View_ diagram.

== v2025.4.0

=== Shapes

- Add support for library publication

=== Breaking changes

- https://github.com/eclipse-syson/syson/issues/1079[#1079] [metamodel] Align metamodel to SysMLv2 2024-12 specification released on December 2024(see https://www.omg.org/spec/SysML/ for more details) and KerML 2024-12 specification released on December 2024(see https://www.omg.org/spec/KerML/ for more details).
Please download all your models/projects before upgrading to 2025.4.0.
The new concepts are:
* `CrossSubsetting` (inherits from `Subsetting`)
* `IndexExpression` (inherits from `OperatorExpression`)
The new operations are:
* `Usage#referencedTargetFeature()`
* `Type#supertypes(EBoolean)`
* `Type#removedRedefinedFeatures(Membership)`
* `Type#nonPrivateMemberships(Namespace, Type, EBoolean)`
* `Type#inheritableMemberships(Namespace, Type, EBoolean)`
* `Type#multiplicities()`
* `Namespace#membershipsOfVisibility(VisibilityKind, Namespace)`
* `Membership#allRedefinedFeatures()`
* `Feature#allRedefinedFeatures()`
* `Feature#asCartesianProduct()`
* `Feature#isCartesianProduct()`