@@ -258,6 +258,7 @@ image:StateTransitionsCmpOnStates.png[State Transition Compartment on StateUsage
 - The `ViewUsage#exposedElement` feature is now updated to reflect the contents of the diagram (_General View_, _Interconnection View_, _Action Flow View_...) on which it is associated.
 - Make file extension check case-insensitive on textual import (i.e. allows to import .SYSML, .SysML, .KERML...)
 - Make the _Details_ view more extensible in how it determines whether a SysML _Element_ is editable or not.
+Also improve the kind of elements for which SysON is able to determine whether they are editable or not.
 - In diagrams, improve _direct edit_ tool on `ConstraintUsage` to be able to edit basic expressions.
 It is now possible to use the following type of expressions in a `ConstraintUsage:
 
